--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "2580",
-    "database": "database_development",
-    "host": "127.0.0.1",
+    "username": "process.env.DB_USER",
+    "password": "process.env.DB_PASSWORD",
+    "database": "process.env.DB_NAME",
+    "host": "process.env.DB_HOST",
     "dialect": "mysql"
   },
   "test": {
